snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.pom.sha256
5672afd13862dd2d9c131dd037c1849b0353c71ce3a17d4106e8ad815a295bc2